Change in build config.

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,5 +1,7 @@
 steps:
   - name: 'gcr.io/cloud-builders/gcloud'
     args: ['functions', 'deploy', 'first_cloud_function', '--entry-point', 'first_cloud_function', '--runtime', 'python39', '--trigger-http', '--source', '.']
+options:
+  logging: NONE
 
 timeout: '540s'
