Maybe this config will work...

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,6 +2,6 @@ steps:
   - name: 'gcr.io/cloud-builders/gcloud'
     args: ['functions', 'deploy', 'first_cloud_function', '--entry-point', 'first_cloud_function', '--runtime', 'python39', '--trigger-http', '--source', '.']
 options:
-  logging: NONE
+  logging: CLOUD_LOGGING_ONLY
 
 timeout: '540s'
