Correction in region.

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,6 +1,18 @@
 steps:
   - name: 'gcr.io/cloud-builders/gcloud'
-    args: ['functions', 'deploy', 'first_cloud_function', '--entry-point', 'first_cloud_function', '--runtime', 'python39', '--trigger-http', '--source', '.']
+    args:
+      - 'functions'
+      - 'deploy'
+      - 'first_cloud_function'
+      - '--entry-point'
+      - 'first_cloud_function'
+      - '--runtime'
+      - 'python39'
+      - '--trigger-http'
+      - '--source'
+      - '.'
+      - '--region'
+      - 'us-west2'
 options:
   logging: CLOUD_LOGGING_ONLY
 
